--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
 	],
 	"main": "index.js",
 	"scripts": {
+		"frontend": "npx lerna run dev --scope=frontend",
+		"storybook": "npx lerna run storybook --scope=frontend",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [],
