--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -24,6 +24,7 @@
 		"@storybook/addon-interactions": "^7.0.11",
 		"@storybook/addon-links": "^7.0.11",
 		"@storybook/blocks": "^7.0.11",
+		"@storybook/preset-typescript": "^3.0.0",
 		"@storybook/react": "^7.0.11",
 		"@storybook/react-vite": "^7.0.11",
 		"@storybook/testing-library": "^0.0.14-next.2",
@@ -31,10 +32,11 @@
 		"@types/react-dom": "^18.0.0",
 		"@types/styled-components": "^5.1.26",
 		"@vitejs/plugin-react": "^1.3.0",
+		"blocks": "link:@storybook/addon-docs/blocks",
 		"prop-types": "^15.8.1",
 		"sass": "^1.56.1",
 		"storybook": "^7.0.11",
-		"typescript": "^4.6.3",
+		"typescript": "^4.9.5",
 		"vite": "^3.0.10",
 		"vite-plugin-pwa": "^0.13.3"
 	}
