--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -37,7 +37,6 @@
 		"sass": "^1.56.1",
 		"storybook": "^7.0.11",
 		"typescript": "^4.9.5",
-		"vite": "^3.0.10",
-		"vite-plugin-pwa": "^0.13.3"
+		"vite": "^3.0.10"
 	}
 }
